Google Safe Browsing first basic implementation

--- a/UrlShortener/build.gradle
+++ b/UrlShortener/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 
     implementation 'commons-validator:commons-validator:1.6'
     implementation 'com.google.guava:guava:28.1-jre'
+    
+    compile 'com.google.apis:google-api-services-safebrowsing:v4-rev123-1.25.0'
 
     runtime 'org.webjars:bootstrap:3.3.5'
     runtime 'org.webjars:jquery:2.1.4'
