--- a/UrlShortener/build.gradle
+++ b/UrlShortener/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation 'commons-validator:commons-validator:1.6'
     implementation 'com.google.guava:guava:28.1-jre'
 
+    implementation "com.opencsv:opencsv:4.0"
+
     runtime 'org.webjars:bootstrap:3.3.5'
     runtime 'org.webjars:jquery:2.1.4'
 
