--- a/UrlShortener/build.gradle
+++ b/UrlShortener/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
     implementation 'commons-validator:commons-validator:1.6'
     implementation 'com.google.guava:guava:28.1-jre'
@@ -26,10 +27,13 @@ dependencies {
     implementation 'com.github.ua-parser:uap-java:1.4.3'
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
 
-    implementation "com.opencsv:opencsv:4.0"
+    implementation 'com.opencsv:opencsv:4.0'
 
     runtime 'org.webjars:bootstrap:3.3.5'
     runtime 'org.webjars:jquery:2.1.4'
+    runtime 'org.webjars:webjars-locator-core'
+    runtime 'org.webjars:sockjs-client:1.0.2'
+    runtime 'org.webjars:stomp-websocket:2.3.3'
 
     runtime 'org.hsqldb:hsqldb'
 
